<resources>
    <string name="app_name">Lab_05_-_Working_with_a_list_Polubenskiy</string>

    <string name="buttonNew">New</string>
    <string name="buttonEdit">Edit</string>
    <string name="buttonDelete">Delete</string>

    <string name="title">Title</string>
    <string name="content">Content</string>

    <string name="buttonSave">Save</string>
    <string name="buttonCancel">Cancel</string>

</resources>